fix: update contact email in footer and prevent line breaks in sub text

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ sub {
     font-style: italic;
     font-size: 14pt;
     margin-bottom: 40px;
+    white-space: nowrap;
 }
 
 .italic {
